--- a/apps/snake/src/style.css
+++ b/apps/snake/src/style.css
@@ -1,3 +1,7 @@
+/* * {
+  outline: 1px solid gray;
+} */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -18,6 +22,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -45,9 +50,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -58,9 +65,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
@@ -88,16 +97,30 @@ button:focus-visible {
 
 .cell {
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 200ms ease-in-out, opacity 200ms ease-in-out;
+  opacity: .5;
 }
 
 .food {
-  background: yellow;
+  border-radius: .2rem;
+  background-color: yellow;
+  opacity: 1;
 }
 
 .player {
-  background: red;
+  border-radius: .1rem;
+  background-color: red;
+  opacity: 1;
 }
 
-* {
-  outline: 1px solid gray;
+.head {
+  position: relative;
+  background-color: green;
+}
+
+.head>* {
+  position: absolute;
 }
