--- a/apps/snake/src/style.css
+++ b/apps/snake/src/style.css
@@ -79,8 +79,9 @@ button:focus-visible {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  height: calc(100dvh - 1px);
-  width: calc(100dvw - 1px);
+  height: calc(100dvh - .5rem);
+  width: calc(100dvw - .5rem);
+  padding: .25rem;
   display: flex;
 }
 
@@ -100,27 +101,35 @@ button:focus-visible {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 200ms ease-in-out, opacity 200ms ease-in-out;
+  transition: background-color 130ms ease-in-out, opacity 130ms ease-in-out;
   opacity: .5;
 }
 
 .food {
   border-radius: .2rem;
-  background-color: yellow;
   opacity: 1;
+  background-color: yellow;
 }
 
 .player {
-  border-radius: .1rem;
-  background-color: red;
+  border-radius: .15rem;
   opacity: 1;
+  background-color: red;
 }
 
 .head {
   position: relative;
-  background-color: green;
+  opacity: 1;
+  border-radius: 50%;
+  transition-duration: 1ms;
+  background-color: deeppink;
 }
 
 .head>* {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.15rem;
+  font-weight: bold;
 }
